# hatrami

./: .eslintrc.js  .gitignore  package.json  requirements.txt  vercel.json
api/: pyproject.toml
api/server/: api.py  complementation.lark  model.py  output.py  parser.py  routes.py  transcription.lark
api/tests/: test_parser.py
public/: index.html
src/: App.tsx  index.tsx
src/components/monocule/: DocxDownloadButton.tsx  ParseStatus.tsx
src/components/organism/: Content.tsx  Header.tsx  RenderedOutput.tsx  Syntax.tsx
src/components/pages/: Top.tsx
src/containers/monocule/: DocxDownloadButton.tsx
src/containers/organism/: Content.tsx
src/data/: Transliteration.ts
src/domain/: backend.ts
